# Python-MyPy

./: README.md  hello.py  pyproject.toml
01-getting-started/: 1-dynamic-static.py  2-more-complex-types.py  3-local-type-inference.py  4-types-from-libraries.py  README.md  pyproject.toml
02-cheat-sheat/: hello.py
02-cheat-sheet/: 1-variables.py  2-useful-built-ins.py  3-functions.py  4-classes.py  5-when-things-are-complicated.py  6-standard-duck-types.py  7-forward-refs.py  8-decorators.py  9-coroutines-asyncio.py  README.md  pyproject.toml
03-existing-codebase/: README.md  hello.py  pyproject.toml
04-built-in-types/: README.md  hello.py  pyproject.toml
05-type-annotations/: 01-container-types.py  README.md  hello.py  pyproject.toml
06-kinds-of-types/: README.md  hello.py  pyproject.toml
07-class-basics/: README.md  hello.py  pyproject.toml
08-annotation-issues/: README.md  hello.py  pyproject.toml
09-protocols/: README.md  pyproject.toml
10-dynamically-typed/: README.md  hello.py  pyproject.toml
11-type-narrowing/: README.md  hello.py  pyproject.toml
12-duck-type/: README.md  hello.py  pyproject.toml
13-stub-files/: README.md  hello.py  pyproject.toml
14-generics/: README.md  pyproject.toml
15-more-types/: README.md  hello.py  pyproject.toml
16-enums/: README.md  hello.py  pyproject.toml
17-typed-dict/: README.md  hello.py  pyproject.toml
18-finals/: README.md  hello.py  pyproject.toml
19-metaclasses/: README.md  hello.py
variance/: README.md  hello.py  pyproject.toml
